--- a/123/gogo.html
+++ b/123/gogo.html
@@ -163,16 +163,7 @@
                         width: 56;
                       "
                     >
-                      <div
-                        style="
-                          margin: 10px;
-                          padding: 0px 5px;
-                          border-radius: 10px;
-                          display: flex;
-                          justify-content: start;
-                          background-color: beige;
-                        "
-                      >
+                      <div class="share">
                         <svg
                           width="24"
                           height="24"
