--- a/123/gogo.html
+++ b/123/gogo.html
@@ -10,77 +10,79 @@
       <div class="container1">
         <div class="header">
           <div style="display: flex; margin: 0; height: 29px">
-            <img
-              style="height: 39px; width: 119px; margin: 0"
+              <img
+              class="gg"
               src="./GOGO.png"
             />
-            <div style="display: flex">
-              <p style="margin-left: 20px" class="h">Medee</p>
-              <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
-                <path
-                  stroke="currentColor"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="m19 9-7 7-7-7"
-                />
-              </svg>
-            </div>
-            <div style="display: flex">
-              <p class="h">Gogo bulan</p>
-              <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
-                <path
-                  stroke="currentColor"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="m19 9-7 7-7-7"
-                />
-              </svg>
-            </div>
-            <div style="display: flex">
-              <p class="h">Uzeh</p>
-              <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
-                <path
-                  stroke="currentColor"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="m19 9-7 7-7-7"
-                />
-              </svg>
-            </div>
-            <div style="display: flex">
-              <p class="h">Hev mayg</p>
-              <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
-                <path
-                  stroke="currentColor"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="m19 9-7 7-7-7"
-                />
-              </svg>
-            </div>
-            <div style="display: flex">
-              <p class="h">Englsih</p>
-              <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
-                <path
-                  stroke="currentColor"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="m19 9-7 7-7-7"
-                />
-              </svg>
-              <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
-                <path
-                  stroke="currentColor"
-                  stroke-linecap="round"
-                  stroke-width="2"
-                  d="m21 21-3.5-3.5M17 10a7 7 0 1 1-14 0 7 7 0 0 1 14 0Z"
-                />
-              </svg>
+            <div class="gl">
+              <div style="display: flex">
+                <p style="margin-left: 20px" class="h">Medee</p>
+                <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
+                  <path
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="m19 9-7 7-7-7"
+                  />
+                </svg>
+              </div>
+              <div style="display: flex">
+                <p class="h">Gogo bulan</p>
+                <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
+                  <path
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="m19 9-7 7-7-7"
+                  />
+                </svg>
+              </div>
+              <div style="display: flex">
+                <p class="h">Uzeh</p>
+                <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
+                  <path
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="m19 9-7 7-7-7"
+                  />
+                </svg>
+              </div>
+              <div style="display: flex">
+                <p class="h">Hev mayg</p>
+                <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
+                  <path
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="m19 9-7 7-7-7"
+                  />
+                </svg>
+              </div>
+              <div style="display: flex">
+                <p class="h">Englsih</p>
+                <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
+                  <path
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="m19 9-7 7-7-7"
+                  />
+                </svg>
+                <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
+                  <path
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-width="2"
+                    d="m21 21-3.5-3.5M17 10a7 7 0 1 1-14 0 7 7 0 0 1 14 0Z"
+                  />
+                </svg>
+              </div>
             </div>
           </div>
           <div style="display: flex">
@@ -122,16 +124,7 @@
             </div>
           </div>
         </div>
-        <div
-          id="grad1"
-          style="
-            height: 385px;
-            display: flex;
-            justify-content: space-around;
-            background-color: white;
-            border-radius: 10px;
-          "
-        >
+        <div id="grad1" class="grnf">
           <div class="gradient" style="width: 50%; height: 100%">
             <div>
               <div
@@ -227,11 +220,7 @@
             />
 
             <!-- background: rgba(0, 0, 0, 0.5) -->
-            <a
-              href="https://www.instagram.com/"
-              style="display: flex"
-              class="dont-hidden"
-            >
+            <a href="https://www.instagram.com/" class="dont-hidden">
               <p class="gray">Дэлгэрэнгүй</p>
               <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
                 <path
@@ -245,47 +234,36 @@
             </a>
           </div>
         </div>
-        <div
-          style="
-            display: flex;
-            gap: 20px;
-            margin-top: 50px;
-            border-radius: 20px;
-          "
-        >
+        <div class="big3">
           <div style="width: 100%">
             <div class="gerle">
               <img src="./china.jpg" />
-              <a
-              href="https://www.instagram.com/"
-              style="display: flex"
-              class="dont-hidden"
-            >
-              <p class="gray">Дэлгэрэнгүй</p>
-              <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
-                <path
-                  stroke="currentColor"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M19 12H5m14 0-4 4m4-4-4-4"
-                />
-              </svg>
-            </a>
+              <a href="https://www.instagram.com/" class="gerle-hidden">
+                <p class="gray">Дэлгэрэнгүй</p>
+                <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
+                  <path
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M19 12H5m14 0-4 4m4-4-4-4"
+                  />
+                </svg>
+              </a>
             </div>
             <h1 class="damn">
               ТОМИЛОЛТ: Дэд бүтцийн томоохон төслүүдийг гацаанаас гаргасан
               Шанхайн айлчлал
             </h1>
-            <div style="display: flex; justify-content: start">
+            <div class="g1">
               <div style="display: flex">
-                <div style="display: flex; margin-right: 20px">
+                <div class="g2">
                   <img class="emoji" src="./share.png" />
-                  <p style="color: black; font-size: 14px; margin: 0">16</p>
+                  <p class="g3">16</p>
                 </div>
                 <div style="display: flex">
                   <img class="emoji" src="./comment emoji.png" />
-                  <p style="color: black; font-size: 14px; margin: 0">9</p>
+                  <p class="g3">9</p>
                 </div>
               </div>
             </div>
@@ -293,17 +271,29 @@
           <div style="width: 100%">
             <div class="gerle">
               <img src="./savan.jpg" />
+              <a href="https://www.instagram.com/" class="gerle-hidden">
+                <p class="gray">Дэлгэрэнгүй</p>
+                <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
+                  <path
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M19 12H5m14 0-4 4m4-4-4-4"
+                  />
+                </svg>
+              </a>
             </div>
             <h1 class="damn">П.Анужин Ерөнхий сайдын зөвлөхөөр томилогджээ</h1>
-            <div style="display: flex; justify-content: start">
+            <div class="g1">
               <div style="display: flex">
-                <div style="display: flex; margin-right: 20px">
+                <div class="g2">
                   <img class="emoji" src="./share.png" />
-                  <p style="color: black; font-size: 14px; margin: 0">16</p>
+                  <p class="g3">16</p>
                 </div>
                 <div style="display: flex">
                   <img class="emoji" src="./comment emoji.png" />
-                  <p style="color: black; font-size: 14px; margin: 0">9</p>
+                  <p class="g3">9</p>
                 </div>
               </div>
             </div>
@@ -311,37 +301,38 @@
           <div style="width: 100%">
             <div class="gerle">
               <img src="./woman.jpeg" />
+              <a href="https://www.instagram.com/" class="gerle-hidden">
+                <p class="gray">Дэлгэрэнгүй</p>
+                <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
+                  <path
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M19 12H5m14 0-4 4m4-4-4-4"
+                  />
+                </svg>
+              </a>
             </div>
             <h1 class="damn">
               H.Цэцэгмаа: 13 жил байр түрээсэлсэн ч Voyage цэвэр уснаас 40
               ширхгийг худалдаж аваад л өөрийн гэсэн орон сууцтай боллоо
             </h1>
-            <div style="display: flex; justify-content: start">
+            <div class="g1">
               <div style="display: flex">
-                <div style="display: flex; margin-right: 20px">
-                  <img style="height: 20px; width: 20px" src="./share.png" />
-                  <p style="color: black; font-size: 14px; margin: 0">16</p>
+                <div class="g2">
+                  <img class="emoji" src="./share.png" />
+                  <p class="g3">16</p>
                 </div>
                 <div style="display: flex">
-                  <img
-                    style="height: 20px; width: 20px"
-                    src="./comment emoji.png"
-                  />
-                  <p style="color: black; font-size: 14px; margin: 0">9</p>
+                  <img class="emoji" src="./comment emoji.png" />
+                  <p class="g3">9</p>
                 </div>
               </div>
             </div>
           </div>
           <div style="width: 100%">
-            <img
-              style="
-                height: 300px;
-                width: 100%;
-                margin-bottom: 10px;
-                border-radius: 10px;
-              "
-              src="./blue.jpg"
-            />
+            <img class="some" src="./blue.jpg" />
           </div>
         </div>
       </div>
@@ -352,8 +343,8 @@
         <h1 class="story2">GoGo</h1>
         <p class="story1">story</p>
       </div>
-      <div style="text-align: center; margin: auto; margin-top: 30px">
-        <div style="display: flex; justify-content: space-between">
+      <div class="zurg66">
+        <div class="zurg6">
           <div class="zurgnuud">
             <img class="background-image" src="./model.jpg" />
             <div class="zurgnuudG">
@@ -396,16 +387,7 @@
     <div style="display: flex; justify-content: center">
       <div style="width: 1100px">
         <div style="display: flex; margin-top: 30px">
-          <h1
-            style="
-              font-size: 22px;
-              margin: 0px 0px 5px;
-              color: #407ce8;
-              margin-right: 5px;
-            "
-          >
-            onoodorrr
-          </h1>
+          <h1 class="blue">onoodorrr</h1>
           <img style="width: 30px; height: 30px" src="./flower.png" />
         </div>
         <div style="display: flex">
